# Demo

./: README.md  aws-auth.yaml  backend-service-account.yaml  docker-compose.rag-eval.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  pytest.ini  root-ca.pem
backend/: .deepeval  .deepeval_telemtry.txt  Dockerfile  Dockerfile.dev  Dockerfile.test  general_code_things.md  pyproject.toml  pytest.ini  run_rag_eval.sh  run_tests.sh  setup.py
backend/app/: __init__.py  app.py
backend/auth/: utils.py
backend/blueprints/: auth_routes.py  chat_routes.py  doc_petition_routes.py  file_routes.py  filter_routes.py  misc_routes.py  organization_routes.py  subscription_routes.py  user_routes.py
backend/config/: base.py  development.py  production.py  test.py
backend/exceptions/: exceptions.py
backend/factories/: embedding_provider_factory.py  llm_provider_factory.py
backend/highlights/: 9035deac-bf42-4a2f-8d11-e52aa8c493da.html  a75007df-cc09-4032-8076-c42988599da2.html
backend/models/: action_log.py  billing_cycle.py  chat.py  file_metadata.py  index_registry.py  invitation.py  organization.py  pending.py  registration_session.py  usage.py  user.py  user_organization.py
backend/project_types/: embedding_provider.py  error_types.py  leaky_bucket.py  llm_provider.py  provider_limiter.py  request_admission.py
backend/providers/: anthropic_provider.py  cohere_provider.py  groq_provider.py  openai_provider.py  voyage_provider.py
backend/rag_eval/: .deepeval_telemtry.txt  .env.eval  Dockerfile  generation_eval.py  llm_setup.py  run_docker_eval.sh  run_evals.py  temp_test_run_data.json
backend/services/: auth_service.py  chat_service.py  document_ingestion_service.py  document_processing_strategies.py  elasticsearch_service.py  email_service.py  embedding_service.py  embedding_strategies.py  file_service.py  filter_service.py  (+10 more)
(+261 files in other folders)
